--- a/app/src/main/res/layout/activity_about_cyphers.xml
+++ b/app/src/main/res/layout/activity_about_cyphers.xml
@@ -24,6 +24,7 @@
         android:id="@+id/spinnerAboutCyphers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:entries="@array/namesCyphers"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +57,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewAboutCyphers"
-        app:layout_constraintVertical_bias="0.347" />
+        app:layout_constraintVertical_bias="0.357" />
 
     <TextView
         android:id="@+id/descOfTheAlgorithm"
@@ -69,5 +70,5 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/manual"
-        app:layout_constraintVertical_bias="0.966" />
+        app:layout_constraintVertical_bias="0.136" />
 </androidx.constraintlayout.widget.ConstraintLayout>
