--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,10 +43,11 @@
         android:id="@+id/encrDecryTV"
         android:layout_width="220dp"
         android:layout_height="50dp"
+        android:gravity="center"
         android:hint="Ваше Зашифрованное сообшение"
+        android:scrollbars="vertical"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.456"
@@ -199,9 +200,10 @@
         android:id="@+id/TVKey"
         android:layout_width="220dp"
         android:layout_height="50dp"
+        android:gravity="center"
         android:hint="Ваш ключ от шифра"
-        android:textColor="@color/white"
         android:scrollbars="vertical"
+        android:textColor="@color/white"
         android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
