Добавил взлом шифра цезаря

--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -3,4 +3,7 @@
     <item
         android:id="@+id/cyphers"
         android:title="О шифрах"/>
+    <item
+        android:id="@+id/hack"
+        android:title="Взлом шифров"/>
 </menu>
