--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,10 @@
 
     <ImageView
         android:id="@+id/More"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="51dp"
+        android:layout_height="47dp"
         android:layout_marginStart="6dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="45dp"
         android:backgroundTint="@color/white"
         android:contentDescription="@string/todo"
         app:layout_constraintStart_toStartOf="parent"
